# keras-flores

./: Notebook_Keras_primeiros_passos.ipynb  README.md  classificacao_flores.ipynb  pyproject.toml
